After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 712387 - Unable to pair my Apple bluetooth keyboard
Unable to pair my Apple bluetooth keyboard
Status: RESOLVED FIXED
Product: gnome-bluetooth
Classification: Core
Component: wizard
3.10.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-bluetooth-general-maint@gnome.bugs
gnome-bluetooth-general-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2013-11-15 19:07 UTC by Emmanuele Bassi (:ebassi)
Modified: 2013-11-25 11:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Untested: Add DisplayPinCode support (6.40 KB, patch)
2013-11-15 19:49 UTC, Bastien Nocera
none Details | Review

Description Emmanuele Bassi (:ebassi) 2013-11-15 19:07:54 UTC
steps to reproduce (with Fedora 20 and GNOME 3.10):

 * add a new bluettoth device
 * fine the Apple wireless keyboard in the list of devices
 * connect to the device
 * wait
 * get a failure to connect

in Fedora 19 I usually got a dialog with the PIN to enter in order to pair.

looking at journalctl, I can see these:

Nov 15 18:25:19 marie gnome-session[1394]: [100B blob data]
Nov 15 18:25:19 marie gnome-session[1394]: (bluetooth-wizard:2911): Bluetooth-WARNING **: Pair() failed: Timeout was reached
Nov 15 18:24:54 marie bluetoothd[418]: Agent replied with an error: org.freedesktop.DBus.Error.UnknownMethod, No such method 'DisplayPinCode'
Nov 15 18:24:51 marie gnome-session[1394]: [156B blob data]
Nov 15 18:24:51 marie gnome-session[1394]: (bluetooth-wizard:2911): Bluetooth-WARNING **: Pair() failed: GDBus.Error:org.bluez.Error.AuthenticationRejected: Authentication Rejected
Nov 15 18:24:48 marie gnome-session[1394]: [146B blob data]
Nov 15 18:24:48 marie gnome-session[1394]: (bluetooth-wizard:2911): Bluetooth-WARNING **: Pair() failed: GDBus.Error:org.bluez.Error.ConnectionAttemptFailed: Page Timeout

so it seems that there's a missing DBus method.
Comment 1 Bastien Nocera 2013-11-15 19:49:24 UTC
Created attachment 259944 [details] [review]
Untested: Add DisplayPinCode support
Comment 2 Emmanuele Bassi (:ebassi) 2013-11-18 13:26:00 UTC
re-assigning.
Comment 3 Emmanuele Bassi (:ebassi) 2013-11-18 13:46:54 UTC
can confirm that the patch works: I was able to pair my keyboard correctly after applying and rebuilding the bluetooth-wizard.