lib: Add DisplayPinCode support

https://bugzilla.gnome.org/show_bug.cgi?id=712387